--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
                         <a class="nav-link link text-black display-4" href="#" aria-expanded="false">Acumuladores</a>
 					</li></ul>
 			</div>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+				<div class="hamburger">
+					<span></span>
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
+			</button>
 		</div>
 	</nav>
 </section>
@@ -68,9 +76,10 @@
           <strong>Matenva</strong>
         </h1>
         
-        <p class="mbr-fonts-style mbr-text mbr-white mb-4 display-7">Soluciones integrales para tu negocio</p>
+        <p class="mbr-fonts-style mbr-text mbr-white mb-4 display-7">Soluciones integrales para tu negocio.</p>
+        <p class="mbr-fonts-style mbr-text mbr-white mb-4 display-7">Para visitar nuestra tienda "ParaMiFiesta" haz click en "Ver Más".</p>
         <div class="mbr-section-btn">
-          <a class="btn btn-white-outline display-7" href="#">Ver Más</a>
+          <a class="btn btn-white-outline display-7" href="https://www.paramifiesta.es/" target="_blank" rel="noopener noreferrer">Ver Más</a>
         </div>
       </div>
     </div>
@@ -103,7 +112,7 @@
                         <h5 class="item-title mbr-fonts-style display-5">
                             <strong>Cajas</strong>
                         </h5>
-                        <p class="mbr-text mbr-fonts-style display-7">Kit básico para envíos seguros y eficientes.</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Cajas de Polipropileno y Cajas de poliestireno.</p>
                         <div class="mbr-section-btn item-footer">
                             <a href="" class="btn item-btn btn-primary display-7">Ver más</a>
                         </div>
@@ -156,17 +165,26 @@
 </section>
 
 <section data-bs-version="5.1" class="gallery10 cid-uLdw5exKYa" id="features-69-uLdw5exKYa">
-  
-
-
   <div class="container-fluid">
-
-      <div class="loop-container">
-        <div class="item display-1" data-linewords="Calidad superior en cada solución * Innovación constante para tu negocio * " data-direction="-1" data-speed="0.05">☁️ Best offers ☁️ Free delivery ☁️ Perfect design ☁️ Comfort ☁️ Support 24/7 ☁️ Vibes</div>
-
-        <div class="item display-1" data-linewords="Calidad superior en cada solución * Innovación constante para tu negocio * " data-direction="-1" data-speed="0.05">☁️ Best offers ☁️ Free delivery ☁️ Perfect design ☁️ Comfort ☁️ Support 24/7 ☁️ Vibes</div>
+    <div class="loop-container">
+      <!-- Primer elemento con tamaño fijo -->
+      <div class="item display-1" 
+           data-linewords="Calidad superior en cada solución * Innovación constante para tu negocio * " 
+           data-direction="-1" 
+           data-speed="0.05"
+           style="font-size: 2.5rem !important; transform: none !important; transition: none !important;">
+        ☁️ Best offers ☁️ Free delivery ☁️ Perfect design ☁️ Comfort ☁️ Support 24/7 ☁️ Vibes
       </div>
-    
+
+      <!-- Segundo elemento con mismo tamaño -->
+      <div class="item display-1" 
+           data-linewords="Calidad superior en cada solución * Innovación constante para tu negocio * " 
+           data-direction="-1" 
+           data-speed="0.05"
+           style="font-size: 2.5rem !important; transform: none !important; transition: none !important;">
+        ☁️ Best offers ☁️ Free delivery ☁️ Perfect design ☁️ Comfort ☁️ Support 24/7 ☁️ Vibes
+      </div>
+    </div>
   </div>
 </section>
 
