--- a/index.html
+++ b/index.html
@@ -165,26 +165,17 @@
 </section>
 
 <section data-bs-version="5.1" class="gallery10 cid-uLdw5exKYa" id="features-69-uLdw5exKYa">
-  <div class="container-fluid">
-    <div class="loop-container">
-      <!-- Primer elemento con tamaño fijo -->
-      <div class="item display-1" 
-           data-linewords="Calidad superior en cada solución * Innovación constante para tu negocio * " 
-           data-direction="-1" 
-           data-speed="0.05"
-           style="font-size: 2.5rem !important; transform: none !important; transition: none !important;">
-        ☁️ Best offers ☁️ Free delivery ☁️ Perfect design ☁️ Comfort ☁️ Support 24/7 ☁️ Vibes
-      </div>
+  
 
-      <!-- Segundo elemento con mismo tamaño -->
-      <div class="item display-1" 
-           data-linewords="Calidad superior en cada solución * Innovación constante para tu negocio * " 
-           data-direction="-1" 
-           data-speed="0.05"
-           style="font-size: 2.5rem !important; transform: none !important; transition: none !important;">
-        ☁️ Best offers ☁️ Free delivery ☁️ Perfect design ☁️ Comfort ☁️ Support 24/7 ☁️ Vibes
+
+  <div class="container-fluid">
+
+      <div class="loop-container">
+        <div class="item display-2" data-linewords="Calidad superior en cada solución * Innovación constante para tu negocio * " data-direction="-1" data-speed="0.05">☁️ Best offers ☁️ Free delivery ☁️ Perfect design ☁️ Comfort ☁️ Support 24/7 ☁️ Vibes</div>
+
+        <div class="item display-2" data-linewords="Calidad superior en cada solución * Innovación constante para tu negocio * " data-direction="-1" data-speed="0.05">☁️ Best offers ☁️ Free delivery ☁️ Perfect design ☁️ Comfort ☁️ Support 24/7 ☁️ Vibes</div>
       </div>
-    </div>
+    
   </div>
 </section>
 
