--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 			<div class="navbar-brand">
 				<span class="navbar-logo">
 					<a href="https://web-matenva.vercel.app/">
-						<img src="assets/images/Matenva_Logo_22x6cm alta resolucion2 sin fondo.png" alt="navbar-logo" style="height: 4.3rem; margin-left: 30px;">
+						<img src="assets/images/Matenva_Logo_22x6cm alta resolucion2 sin fondo.png" alt="navbar-logo" style="height: 4.3rem; margin-left: 80px;">
 					</a>
 				</span>
 			</div>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-						<a class="nav-link link text-black display-4" href="#">Cajas</a>
+						<a class="nav-link link text-black display-4" style="margin-left: 40vh !important;" href="#">Cajas</a>
 					</li>
 					<li class="nav-item">
                         <a class="nav-link link text-black display-4" href="#">Kits</a>
@@ -157,9 +157,6 @@
 </section>
 
 <section data-bs-version="5.1" class="social05 cid-uLdw5eytH4" id="follow-us-2-uLdw5eytH4">
-    
-
-    
 
     <div class="container">
         <div class="row">
