--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			</div>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-						<a class="nav-link link text-black display-4" style="margin-left: 40vh !important;" href="#">Cajas</a>
+						<a class="nav-link link text-black display-4" style="margin-left: 30vh !important;" href="#">Cajas</a>
 					</li>
 					<li class="nav-item">
                         <a class="nav-link link text-black display-4" href="#">Kits</a>
@@ -231,7 +231,7 @@
                 </div>
             </div>
             <div class="map-wrapper col-md-12 col-lg-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3074.3455723246893!2d-0.4009032236288541!3d39.59689720512824!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd606825af0f68b7%3A0x6ba1aa1f44b38784!2sMatenva!5e0!3m2!1sfr!2ses!4v1747265433390!5m2!1sfr!2ses" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3074.3455723246893!2d-0.4009032236288541!3d39.59689720512824!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd606825af0f68b7%3A0x6ba1aa1f44b38784!2sMatenva!5e0!3m2!1ses!2ses!4v1747306066062!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
             </div>
         </div>
     </div>
