--- a/Cajas.html
+++ b/Cajas.html
@@ -35,13 +35,13 @@
 			<div class="navbar-brand">
 				<span class="navbar-logo">
 					<a href="https://web-matenva.vercel.app/">
-						<img src="assets/images/Matenva_Logo_22x6cm alta resolucion2 sin fondo.png" alt="navbar-logo" style="height: 4.3rem; margin-left: 120px;">
+						<img src="assets/images/Matenva_Logo_22x6cm alta resolucion2 sin fondo.png" alt="navbar-logo" style="height: 4.3rem; margin-left: 120px; margin-right: 30vh;">
 					</a>
 				</span>
 			</div>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-						<a class="nav-link link text-black display-4" href="#">Cajas</a>
+						<a class="nav-link link text-black display-4" href="Cajas.html">Cajas</a>
 					</li>
 					<li class="nav-item">
                         <a class="nav-link link text-black display-4" href="#">Kits</a>
