--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/Matenva_Logo_22x6cm alta resolucion2 sin fondo.png" type="image/x-icon">
+<link rel="shortcut icon" href="assets/images/Captura_de_pantalla_2025-05-16_090348-removebg-preview.png" type="image/x-icon">
   <meta name="description" content="Matenva ofrece soluciones integrales en envases y embalaje. Descubre cajas, acumuladores, kits personalizados y más. Embala tu tranquilidad con productos de alta calidad y un servicio confiable. Explora nuestro catálogo.">
   
   
