--- a/Cajas.html
+++ b/Cajas.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/Captura_de_pantalla_2025-05-16_090348-removebg-preview.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/Icono.png" type="image/x-icon">
   <meta name="description" content="Matenva ofrece soluciones integrales en envases y embalaje. Descubre cajas, acumuladores, kits personalizados y más. Embala tu tranquilidad con productos de alta calidad y un servicio confiable. Explora nuestro catálogo.">
   
   
@@ -71,6 +71,11 @@
                 <div class="mbr-section-head mb-5">
                     <h4 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
                         <strong>Cajas de Poliestireno</strong>
+                        <p id="Descripciones">Nuestras cajas de poliestireno expandido de alta calidad están diseñadas para mantener un excelente aislamiento térmico y 
+                            protección durante el transporte y almacenamiento de tus productos, asegurando que lleguen en óptimas condiciones a su destino. 
+                            Ya sea para el envío de alimentos congelados, productos refrigerados o artículos sensibles a la temperatura, pero también para la 
+                            venta a distancia de productos perecederos.Son la solución perfecta para tus necesidades de embalaje. Confía en la calidad y 
+                            rendimiento de nuestras cajas para mantener la frescura y la integridad de tus productos en todo momento.</p>
                     </h4>
                     
                     
@@ -125,6 +130,74 @@
                             <a href="" class="btn item-btn btn-primary display-7">Ver más</a>
                         </div>
                     </div>
+                </div>
+            </div>
+            <div class="item features-image col-12 col-md-6 col-lg-4">
+                <div class="item-wrapper">
+                    <div class="item-img">
+                        <img src="assets/images/cajas.png" alt="">
+                    </div>
+                    <div class="item-content">
+                        <h5 class="item-title mbr-fonts-style display-5">
+                            <strong>Cajas</strong>
+                        </h5>
+                        <p class="mbr-text mbr-fonts-style display-7">Cajas de Polipropileno y Cajas de poliestireno.</p>
+                        <div class="mbr-section-btn item-footer">
+                            <a href="" class="btn item-btn btn-primary display-7">Ver más</a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="item features-image col-12 col-md-6 col-lg-4">
+                <div class="item-wrapper">
+                    <div class="item-img">
+                        <img src="assets/images/cajas.png" alt="">
+                    </div>
+                    <div class="item-content">
+                        <h5 class="item-title mbr-fonts-style display-5">
+                            <strong>Cajas</strong>
+                        </h5>
+                        <p class="mbr-text mbr-fonts-style display-7">Cajas de Polipropileno y Cajas de poliestireno.</p>
+                        <div class="mbr-section-btn item-footer">
+                            <a href="" class="btn item-btn btn-primary display-7">Ver más</a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="item features-image col-12 col-md-6 col-lg-4">
+                <div class="item-wrapper">
+                    <div class="item-img">
+                        <img src="assets/images/cajas.png" alt="">
+                    </div>
+                    <div class="item-content">
+                        <h5 class="item-title mbr-fonts-style display-5">
+                            <strong>Cajas</strong>
+                        </h5>
+                        <p class="mbr-text mbr-fonts-style display-7">Cajas de Polipropileno y Cajas de poliestireno.</p>
+                        <div class="mbr-section-btn item-footer">
+                            <a href="" class="btn item-btn btn-primary display-7">Ver más</a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="item features-image col-12 col-md-6 col-lg-4">
+                <div class="item-wrapper">
+                    <div class="item-img">
+                        <img src="assets/images/cajas.png" alt="">
+                    </div>
+                    <div class="item-content">
+                        <h5 class="item-title mbr-fonts-style display-5">
+                            <strong>Cajas</strong>
+                        </h5>
+                        <p class="mbr-text mbr-fonts-style display-7">Cajas de Polipropileno y Cajas de poliestireno.</p>
+                        <div class="mbr-section-btn item-footer">
+                            <a href="" class="btn item-btn btn-primary display-7">Ver más</a>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
