--- a/Kits.html
+++ b/Kits.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-<link rel="shortcut icon" href="assets/images/Icono.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/Matenva_Logo_22x6cm alta resolucion2 sin fondo.png" type="image/x-icon">
   <meta name="description" content="Matenva ofrece soluciones integrales en envases y embalaje. Descubre cajas, acumuladores, kits personalizados y más. Embala tu tranquilidad con productos de alta calidad y un servicio confiable. Explora nuestro catálogo.">
   
   
@@ -35,13 +35,13 @@
 			<div class="navbar-brand">
 				<span class="navbar-logo">
 					<a href="https://web-matenva.vercel.app/">
-						<img src="assets/images/Matenva_Logo_22x6cm alta resolucion2 sin fondo.png" alt="navbar-logo" style="height: 4.3rem; margin-left: 120px; margin-right: 30vh;">
+						<img src="assets/images/Matenva_Logo_22x6cm alta resolucion2 sin fondo.png" alt="navbar-logo" style="height: 4.3rem; margin-left: 120px;">
 					</a>
 				</span>
 			</div>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-						<a class="nav-link link text-black display-4" href="Cajas.html">Cajas</a>
+						<a class="nav-link link text-black display-4" style="margin-left: 30vh !important;" href="#">Cajas</a>
 					</li>
 					<li class="nav-item">
                         <a class="nav-link link text-black display-4" href="#">Kits</a>
@@ -261,4 +261,3 @@
   
   
 </body>
-</html>
