--- a/Cajas.html
+++ b/Cajas.html
@@ -72,9 +72,9 @@
                     <h4 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
                         <strong>Cajas de Poliestireno</strong>
                         <p id="Descripciones">Nuestras cajas de poliestireno expandido de alta calidad están diseñadas para mantener un excelente aislamiento térmico y 
-                            protección durante el transporte y almacenamiento de tus productos, asegurando que lleguen en óptimas condiciones a su destino. <p>
+                            protección durante el transporte y almacenamiento de tus productos, asegurando que lleguen en óptimas condiciones a su destino. <p id="Descripciones">
                             Ya sea para el envío de alimentos congelados, productos refrigerados o artículos sensibles a la temperatura, pero también para la 
-                            venta a distancia de productos perecederos.<p>Son la solución perfecta para tus necesidades de embalaje. Confía en la calidad y 
+                            venta a distancia de productos perecederos.<p id="Descripciones">Son la solución perfecta para tus necesidades de embalaje. Confía en la calidad y 
                             rendimiento de nuestras cajas para mantener la frescura y la integridad de tus productos en todo momento.</p>
                     </h4>
                     
