--- a/Cajas.html
+++ b/Cajas.html
@@ -86,15 +86,27 @@
             <div class="item features-image col-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/cajas.png" alt="">
+                        <img src="assets/images/Cajas Polipropileno/Caja poliestireno 1.jpg" alt="">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5">
-                            <strong>Cajas</strong>
+                            <strong>Caja térmica de poliestireno expandido (1 paquete de 20 unidades)</strong>
                         </h5>
-                        <p class="mbr-text mbr-fonts-style display-7">Cajas de Polipropileno y Cajas de poliestireno.</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Especificaciones: <p></p>
+· Color blanco.<p></p>
+· Capacidad 8 litros.<p></p>
+· Caja moldeada de EPS-airpop.<p></p>
+· Tapa incluida.<p></p>
+· Reutilizable y reciclable (desechar en contenedor amarillo).<p></p>
+<p></p>
+<p></p>
+Dimensiones aprox:<p></p>
+· Medidas exteriores: Largo 330 mm. Ancho 203 mm. Alto 245 mm<p></p>
+· Medidas interiores: Largo 280 mm. Ancho 142 mm. Alto 213 mm<p></p>
+· Grosor: 30 mm<p></p>
+· Peso 0,168Kg</p>
                         <div class="mbr-section-btn item-footer">
-                            <a href="" class="btn item-btn btn-primary display-7">Ver más</a>
+                            <a href="https://www.paramifiesta.es/caja-de-poliestireno-expandido-8-litros.html" class="btn item-btn btn-primary display-7">Comprar</a>
                         </div>
                     </div>
 
