--- a/Cajas.html
+++ b/Cajas.html
@@ -106,107 +106,7 @@ Dimensiones aprox:<p></p>
 · Grosor: 30 mm<p></p>
 · Peso 0,168Kg</p>
                         <div class="mbr-section-btn item-footer">
-                            <a href="https://www.paramifiesta.es/contenedores-isotermicos-114/cajas-poliestireno.html" class="btn item-btn btn-primary display-7">Comprar</a>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-            <div class="item features-image col-12 col-md-6 col-lg-4">
-                <div class="item-wrapper">
-                    <div class="item-img">
-                        <img src="assets/images/photo-1559087316-f8860a97e7ba.jpeg" alt="">
-                    </div>
-                    <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-5">
-                            <strong>Kits</strong>
-                        </h5>
-                        <p class="mbr-text mbr-fonts-style display-7">Kit completo para embalaje profesional y resistente.</p>
-                        <div class="mbr-section-btn item-footer">
-                            <a href="" class="btn item-btn btn-primary display-7">Ver más</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="item features-image col-12 col-md-6 col-lg-4">
-                <div class="item-wrapper">
-                    <div class="item-img">
-                        <img src="assets/images/photo-1449247666642-264389f5f5b1.jpeg" alt="">
-                    </div>
-                    <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-5">
-                            <strong>Acumuladores</strong>
-                        </h5>
-                        <p class="mbr-text mbr-fonts-style display-7">Kit especializado para productos frágiles y delicados.</p>
-                        <div class="mbr-section-btn item-footer">
-                            <a href="" class="btn item-btn btn-primary display-7">Ver más</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="item features-image col-12 col-md-6 col-lg-4">
-                <div class="item-wrapper">
-                    <div class="item-img">
-                        <img src="assets/images/cajas.png" alt="">
-                    </div>
-                    <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-5">
-                            <strong>Cajas</strong>
-                        </h5>
-                        <p class="mbr-text mbr-fonts-style display-7">Cajas de Polipropileno y Cajas de poliestireno.</p>
-                        <div class="mbr-section-btn item-footer">
-                            <a href="" class="btn item-btn btn-primary display-7">Ver más</a>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-            <div class="item features-image col-12 col-md-6 col-lg-4">
-                <div class="item-wrapper">
-                    <div class="item-img">
-                        <img src="assets/images/cajas.png" alt="">
-                    </div>
-                    <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-5">
-                            <strong>Cajas</strong>
-                        </h5>
-                        <p class="mbr-text mbr-fonts-style display-7">Cajas de Polipropileno y Cajas de poliestireno.</p>
-                        <div class="mbr-section-btn item-footer">
-                            <a href="" class="btn item-btn btn-primary display-7">Ver más</a>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-            <div class="item features-image col-12 col-md-6 col-lg-4">
-                <div class="item-wrapper">
-                    <div class="item-img">
-                        <img src="assets/images/cajas.png" alt="">
-                    </div>
-                    <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-5">
-                            <strong>Cajas</strong>
-                        </h5>
-                        <p class="mbr-text mbr-fonts-style display-7">Cajas de Polipropileno y Cajas de poliestireno.</p>
-                        <div class="mbr-section-btn item-footer">
-                            <a href="" class="btn item-btn btn-primary display-7">Ver más</a>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-            <div class="item features-image col-12 col-md-6 col-lg-4">
-                <div class="item-wrapper">
-                    <div class="item-img">
-                        <img src="assets/images/cajas.png" alt="">
-                    </div>
-                    <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-5">
-                            <strong>Cajas</strong>
-                        </h5>
-                        <p class="mbr-text mbr-fonts-style display-7">Cajas de Polipropileno y Cajas de poliestireno.</p>
-                        <div class="mbr-section-btn item-footer">
-                            <a href="" class="btn item-btn btn-primary display-7">Ver más</a>
+                            <a href="https://www.paramifiesta.es/contenedores-isotermicos-114/cajas-poliestireno.html" class="btn item-btn btn-primary display-7" target="_blank" rel="noopener noreferrer">Comprar</a>
                         </div>
                     </div>
 
