--- a/Cajas.html
+++ b/Cajas.html
@@ -69,7 +69,7 @@ body {
         <div class="row justify-content-center align-items-center">
             <!-- Columna de imagen -->
             <div class="col-12 col-lg-6 order-lg-2 image-wrapper mb-5 mb-lg-0">
-                <img class="w-100" src="assets/images/Caja polipropileno.png" alt="Content creation example">
+                <img class="w-100" src="assets/images/Contenedor aislante en oficina moderna.png" alt="Content creation example">
             </div>
             
             <!-- Columna de texto -->
@@ -85,7 +85,7 @@ body {
                 </p>
                 
                 <div class="mbr-section-btn mt-3">
-                    <a class="btn btn-lg btn-success display-7" href="#">
+                    <a class="btn btn-lg btn-success display-7" href="https://www.paramifiesta.es/contenedores-isotermicos-114/cajas-polipropileno.html">
                         <span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>
                         Comprar
                     </a>
