--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 						<a class="nav-link link text-black display-4" href="Cajas.html">Cajas</a>
 					</li>
 					<li class="nav-item">
-                        <a class="nav-link link text-black display-4" href="#">Kits</a>
+                        <a class="nav-link link text-black display-4" href="Kits.html">Kits</a>
 					</li>
 					<li class="nav-item">
-                        <a class="nav-link link text-black display-4" href="#" aria-expanded="false">Acumuladores</a>
+                        <a class="nav-link link text-black display-4" href="Acumuladores.html" aria-expanded="false">Acumuladores</a>
 					</li></ul>
 			</div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
