--- a/Cajas.html
+++ b/Cajas.html
@@ -99,7 +99,7 @@ body {
         <div class="row justify-content-center align-items-center">
             <!-- Columna de imagen -->
             <div class="col-12 col-lg-6 order-lg-1 image-wrapper mb-5 mb-lg-0"> <!-- Added margin classes -->
-                <img class="w-100" src="assets/images/background1-1.jpg" alt="Content creation example">
+                <img class="w-100" src="assets/images/Caja poliestireno.png" alt="Content creation example">
             </div>
             
             <!-- Columna de texto -->
