--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         </h5>
                         <p class="mbr-text mbr-fonts-style display-7">Cajas de Polipropileno y Cajas de poliestireno.</p>
                         <div class="mbr-section-btn item-footer">
-                            <a href="" class="btn item-btn btn-primary display-7">Ver más</a>
+                            <a href="Cajas.html" class="btn item-btn btn-primary display-7">Ver más</a>
                         </div>
                     </div>
 
@@ -131,7 +131,7 @@
                         </h5>
                         <p class="mbr-text mbr-fonts-style display-7">Kit completo para embalaje profesional y resistente.</p>
                         <div class="mbr-section-btn item-footer">
-                            <a href="" class="btn item-btn btn-primary display-7">Ver más</a>
+                            <a href="Kits.html" class="btn item-btn btn-primary display-7">Ver más</a>
                         </div>
                     </div>
                 </div>
@@ -139,7 +139,7 @@
             <div class="item features-image col-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/photo-1449247666642-264389f5f5b1.jpeg" alt="">
+                        <img src="assets/images/PAQUETE GEL FLEXIBLE ISO-FREEZE.png" alt="">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5">
@@ -147,7 +147,7 @@
                         </h5>
                         <p class="mbr-text mbr-fonts-style display-7">Kit especializado para productos frágiles y delicados.</p>
                         <div class="mbr-section-btn item-footer">
-                            <a href="" class="btn item-btn btn-primary display-7">Ver más</a>
+                            <a href="Acumuladores.html" class="btn item-btn btn-primary display-7">Ver más</a>
                         </div>
                     </div>
                 </div>
