--- a/Cajas.html
+++ b/Cajas.html
@@ -136,7 +136,7 @@ body {
         <div class="row justify-content-center align-items-center">
             <!-- Columna de imagen -->
             <div class="col-12 col-lg-6 order-lg-2 image-wrapper mb-5 mb-lg-0">
-                <img class="w-100" src="assets/images/Paquete de frío en escritorio moderno.png" alt="Content creation example">
+                <img class="w-100" src="assets/images/Enfoque en el refrigerador de espuma.png" alt="Content creation example">
             </div>
             
             <!-- Columna de texto -->
