--- a/index.html
+++ b/index.html
@@ -182,6 +182,10 @@
                         <span class="socicon-linkedin socicon"></span>
                     </a>
                     
+                    <a class="iconfont-wrapper bg-youtube m-2" href="https://www.linkedin.com/company/matenva/?originalSubdomain=es" target="_blank">
+                        <span class="socicon-youtube socicon"></span>
+                    </a>
+
                 </div>
             </div>
         </div>
