--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                         <span class="socicon-linkedin socicon"></span>
                     </a>
                     
-                    <a class="iconfont-wrapper bg-youtube m-2" href="https://www.linkedin.com/company/matenva/?originalSubdomain=es" target="_blank">
+                    <a class="iconfont-wrapper bg-youtube m-2" href="https://www.youtube.com/@MATENVA" target="_blank">
                         <span class="socicon-youtube socicon"></span>
                     </a>
 
