--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                         <h5 class="item-title mbr-fonts-style display-5">
                             <strong>Acumuladores</strong>
                         </h5>
-                        <p class="mbr-text mbr-fonts-style display-7">Kit especializado para productos frágiles y delicados.</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Acumuladores flexibles y Acumuladores Rigidos</p>
                         <div class="mbr-section-btn item-footer">
                             <a href="Acumuladores.html" class="btn item-btn btn-primary display-7">Ver más</a>
                         </div>
