--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class="item features-image col-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/Contenedor y paquete de hielo aislante.png" alt="">
+                        <img src="assets/images/Contenedor y paquete de hielo aislante.jpg" alt="">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5">
@@ -139,7 +139,7 @@
             <div class="item features-image col-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/Paquete de frío en escritorio moderno.png" alt="">
+                        <img src="assets/images/Paquete de frío en escritorio moderno.jpg" alt="">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5">
