--- a/Cajas.html
+++ b/Cajas.html
@@ -69,7 +69,7 @@ body {
         <div class="row justify-content-center align-items-center">
             <!-- Columna de imagen -->
             <div class="col-12 col-lg-6 order-lg-2 image-wrapper mb-5 mb-lg-0">
-                <img class="w-100" src="assets/images/Contenedor aislante en oficina moderna.png" alt="Content creation example">
+                <img class="w-100" src="assets/images/Contenedor aislante en oficina moderna.jpg" alt="Content creation example">
             </div>
             
             <!-- Columna de texto -->
@@ -103,7 +103,7 @@ body {
         <div class="row justify-content-center align-items-center">
             <!-- Columna de imagen -->
             <div class="col-12 col-lg-6 order-lg-1 image-wrapper mb-5 mb-lg-0"> <!-- Added margin classes -->
-                <img class="w-100" src="assets/images/Caja poliestireno.png" alt="Content creation example">
+                <img class="w-100" src="assets/images/Caja poliestireno.jpg" alt="Content creation example">
             </div>
             
             <!-- Columna de texto -->
