--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="item features-image col-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/cajas.png" alt="">
+                        <img src="assets/images/cajas.jpg" alt="">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5">
