--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         <h5 class="item-title mbr-fonts-style display-5">
                             <strong>Cajas</strong>
                         </h5>
-                        <p class="mbr-text mbr-fonts-style display-7">Cajas de Polipropileno y Cajas de poliestireno.</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Cajas de Polipropileno y poliestireno.</p>
                         <div class="mbr-section-btn item-footer">
                             <a href="Cajas.html" class="btn item-btn btn-primary display-7">Ver más</a>
                         </div>
@@ -129,7 +129,7 @@
                         <h5 class="item-title mbr-fonts-style display-5">
                             <strong>Kits</strong>
                         </h5>
-                        <p class="mbr-text mbr-fonts-style display-7">Kit completo para embalaje profesional y resistente.</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Kit de frío autonomo sin necesidad de frío exterior. </p>
                         <div class="mbr-section-btn item-footer">
                             <a href="Kits.html" class="btn item-btn btn-primary display-7">Ver más</a>
                         </div>
@@ -145,7 +145,7 @@
                         <h5 class="item-title mbr-fonts-style display-5">
                             <strong>Acumuladores</strong>
                         </h5>
-                        <p class="mbr-text mbr-fonts-style display-7">Acumuladores flexibles y Acumuladores Rigidos</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Acumuladores flexibles y Rigidos</p>
                         <div class="mbr-section-btn item-footer">
                             <a href="Acumuladores.html" class="btn item-btn btn-primary display-7">Ver más</a>
                         </div>
