--- a/Acumuladores.html
+++ b/Acumuladores.html
@@ -109,13 +109,18 @@ body {
             <!-- Columna de texto -->
             <div class="col-12 col-lg-6 order-lg-2 text-wrapper">
                 <h1 class="mbr-section-title mbr-fonts-style mb-4 display-6">
-                    <strong>Acumuladores Rigidos</strong>
+                    <strong>Acumuladores Rígidos</strong>
                 </h1>
                 
                 <p class="mbr-text mbr-fonts-style mb-4 display-12">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec egestas massa vel nulla gravida
-                    pulvinar. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
-                    egestas.
+                    Nuestros acumuladores rígidos consisten en un gel patentado de formulación no tóxica, envasado en un contenedor rígido fabricado a 
+                    partir de un complejo altamente resistente para el transporte de productos refrigerados. Su sencilla manipulación permite disponer de 
+                    refrigerantes de manera rápida y es apto para el contacto alimentario. Una vez utilizado, se puede volver a congelar a la misma temperatura 
+                    para su reutilización posterior. La relación de precio-rendimiento del acumulador de frío rígido es excelente permitiendo una congelación 
+                    de 0°C hasta -15°C. El Enfriador-Acumulador Rígido Frío Negativo es la solución perfecta para mantener tus productos a temperaturas 
+                    extremadamente bajas durante su transporte o almacenamiento. Gracias a su capacidad de enfriamiento superior, es ideal para industrias donde 
+                    se requiere un control preciso de la temperatura, como el transporte de productos congelados o farmacéuticos. Su diseño robusto y eficiente 
+                    lo convierte en una opción confiable tanto para entornos profesionales como para uso personal.
                 </p>
                 
                 <div class="mbr-section-btn mt-3">
