--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         <h5 class="item-title mbr-fonts-style display-5">
                             <strong>Kits</strong>
                         </h5>
-                        <p class="mbr-text mbr-fonts-style display-7">Kit de frío autonomo sin necesidad de frío exterior. </p>
+                        <p class="mbr-text mbr-fonts-style display-7">Kit de frío autónomo sin necesidad de frío exterior. </p>
                         <div class="mbr-section-btn item-footer">
                             <a href="Kits.html" class="btn item-btn btn-primary display-7">Ver más</a>
                         </div>
@@ -145,7 +145,7 @@
                         <h5 class="item-title mbr-fonts-style display-5">
                             <strong>Acumuladores</strong>
                         </h5>
-                        <p class="mbr-text mbr-fonts-style display-7">Acumuladores flexibles y Rigidos</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Acumuladores flexibles y Rígidos</p>
                         <div class="mbr-section-btn item-footer">
                             <a href="Acumuladores.html" class="btn item-btn btn-primary display-7">Ver más</a>
                         </div>
