--- a/Cajas.html
+++ b/Cajas.html
@@ -144,15 +144,15 @@ body {
             <!-- Columna de texto -->
             <div class="col-12 col-lg-6 order-lg-1 text-wrapper">
                 <h1 class="mbr-section-title mbr-fonts-style mb-4 display-6">
-                    <strong>Cajas de Poliestireno Prémium</strong>
+                    <strong>Cajas de Poliestireno Premium</strong>
                 </h1>
                 
                 <p class="mbr-text mbr-fonts-style mb-4 display-12">
-                    Las cajas de poliestireno expandido premium combinan materiales de alta densidad y un diseño reforzado para ofrecer el máximo aislamiento 
-                    térmico y resistencia mecánica. Son perfectas para el envío de productos congelados, biológicos o farmacéuticos que requieren un control de 
-                    temperatura más exigente. Gracias a su excelente capacidad de conservación y durabilidad, estas cajas garantizan que tus productos lleguen en 
-                    condiciones óptimas, incluso en trayectos prolongados o condiciones climáticas adversas. La opción ideal para quienes no quieren comprometer 
-                    calidad ni seguridad.
+                    Nuestras cajas de poliestireno expandido premium combinan materiales de alta densidad y un diseño reforzado para ofrecer el máximo aislamiento 
+                    térmico y resistencia mecánica. Son perfectas para el envío de alimentos frescos o refrigerados, así como artículos sensibles a temperaturas 
+                    moderadas y requieren un control de temperatura más exigente. Gracias a su excelente capacidad de conservación y durabilidad, estas cajas 
+                    garantizan que tus productos lleguen en condiciones óptimas, incluso en trayectos prolongados o condiciones climáticas adversas. La opción ideal 
+                    para quienes no quieren comprometer calidad ni seguridad.
 
 
 
