--- a/Kits.html
+++ b/Kits.html
@@ -75,12 +75,12 @@ body {
             <!-- Columna de texto -->
             <div class="col-12 col-lg-6 order-lg-1 text-wrapper">
                 <h1 class="mbr-section-title mbr-fonts-style mb-4 display-6">
-                    <strong>Kits de frio</strong>
+                    <strong>Kits de Frío</strong>
                 </h1>
                 
                 <p class="mbr-text mbr-fonts-style mb-4 display-12">
                     INSTRUCCIONES DE USO:
-                    Es muy conveniente preenfriar la caja antes de su uso al menos una hora antes de su utilización. O bien en una cámara de frío (es lo ideal, o bien 
+                    Es muy conveniente pre enfriar la caja antes de su uso al menos una hora antes de su utilización. O bien en una cámara de frío (es lo ideal, o bien 
                     poniéndole unos acumuladores como los que se van a utilizar y luego sustituirlos por unos recién sacados del congelador) al mínimo de temperatura 
                     posible o se perderán horas de frío. Los acumuladores tienen que estar al menos 24 horas en el congelador para que se congelen adecuadamente.
                     <br><br>
@@ -89,7 +89,7 @@ body {
                     3. El frío siempre va hacia abajo. Los acumuladores son más efectivos encima del producto o en los laterales.<br>
                     4. Nuestros acumuladores de frío son reutilizables, recuerde que la duración de estos dependerá de las condiciones de uso y temperaturas de transporte. El tapón azul indica 
                     frío positivo y está diseñado para productos refrigerados, tiene una alta duración, pero menos potencia de frío que nuestro acumulador con tapón rojo de frío negativo, 
-                    este está indicado para producto congelado o producto refrigerado que necesitemos acondicionar rápidamente. ATENCION: El acumulador de tapón rojo puede congelar el producto, 
+                    este está indicado para producto congelado o producto refrigerado que necesitemos acondicionar rápidamente. ATENCIÓN: El acumulador de tapón rojo puede congelar el producto, 
                     recomendamos utilizar cada color según el frío que se necesite.<br>
                     5. Los ensayos realizados son en época de verano con temperaturas medias de 30 o más grados exteriores, teniendo en cuenta que la caja viaja en un camión o en avión en 
                     trasportes internacionales. En caso de hacerlo en invierno o temperaturas bajas las horas de duración aumentaran según las circunstancias.
