--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         <h5 class="item-title mbr-fonts-style display-5">
                             <strong>Cajas</strong>
                         </h5>
-                        <p class="mbr-text mbr-fonts-style display-7">Cajas de Polipropileno y poliestireno.</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Cajas de Polipropileno y Poliestireno.</p>
                         <div class="mbr-section-btn item-footer">
                             <a href="Cajas.html" class="btn item-btn btn-primary display-7">Ver más</a>
                         </div>
@@ -145,7 +145,7 @@
                         <h5 class="item-title mbr-fonts-style display-5">
                             <strong>Acumuladores</strong>
                         </h5>
-                        <p class="mbr-text mbr-fonts-style display-7">Acumuladores flexibles y Rígidos</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Acumuladores Flexibles y Rígidos</p>
                         <div class="mbr-section-btn item-footer">
                             <a href="Acumuladores.html" class="btn item-btn btn-primary display-7">Ver más</a>
                         </div>
